@@ -398,6 +398,7 @@ swing.title.mission=Mission\!
 swing.toolbar.armies=Armies
 swing.toolbar.attacked=Attacked
 swing.toolbar.attacks=Attacks
+swing.toolbar.cards=Cards
 swing.toolbar.casualties=Casualties
 swing.toolbar.continents=Continents
 swing.toolbar.countries=Countries
